@@ -1,3 +1,8 @@
+2004-12-01  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* mail/mail-stub-exchange.c (get_folder): Do not set the FILTER_JUNK
+	flag for Trash folder. This fixes #66963
+
 2004-11-30  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* addressbook/e-book-backend-exchange.c 
